Fix weird SVG bug on safari and disable height fix on mobile layout.

--- a/scss/elements/_yotm-reveal.scss
+++ b/scss/elements/_yotm-reveal.scss
@@ -223,7 +223,7 @@ body.noscroll {
 	.yotm-wrapper {
 		overflow: visible;
 		left: -100%;
-		padding: 2em 2.125em 2em 2.125em;
+		padding: 3em 2.125em 3em 2.125em;
 		position: fixed;
 	}
 
@@ -236,7 +236,7 @@ body.noscroll {
 	}
 
 	.yotm-anchor .svg-wrapper {
-		top: 0;
+		top: 15px;
 		left: 50%;
 	}
 
@@ -264,4 +264,5 @@ body.noscroll {
 		transform: translateY(0px);
 	}
 }
+
 
